# Nutrilens-AI

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cloudbuild.yaml  config.py  database.rules.json  firebase.json  main.py  models.py  pyproject.toml  requirements.txt
routers/: __init__.py  auth.py  coach.py  dashboard.py  explore.py  nutrition.py  profile.py
services/: __init__.py  firebase_service.py  fit_service.py  gemini_service.py  maps_service.py  notification_service.py  sheets_service.py  stt_service.py  tts_service.py
static/: app.html  app.js  manifest.json  styles.css  sw.js
tests/: __init__.py  conftest.py  test_coach.py  test_dashboard.py  test_models.py  test_nutrition.py
